--- a/Digi21.Managed.BinImporter.csproj
+++ b/Digi21.Managed.BinImporter.csproj
@@ -4,6 +4,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/digi21/Digi21.Managed.BinImporter.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/digi21/Digi21.Managed.BinImporter</PackageProjectUrl>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="Readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
